# fangorn

./: .gitignore  Cargo.toml  HACKATHON_README.md  README.md  brainstorming.md  build.rs  ciphertext.txt  config.txt  start_instances.sh
contract/iris/: Cargo.toml  README.md  lib.rs
contract/password/: lib.rs
contract/pool/: Cargo.toml  lib.rs
contract/predicate-registry/: Cargo.toml  lib.rs
contract/psp22/: Cargo.toml  lib.rs
docs/: VISION.md  architecture.md  encryption_flow.md  long_README.md  setup.md
entmoot/: Cargo.toml  README.md
entmoot/src/: constants.rs  main.rs
entmoot/src/menus/: error_handler.rs  key_results_screen.rs  mod.rs
entmoot/src/menus/decryption/: decrypt_info.rs  decrypt_screen.rs  mod.rs
entmoot/src/menus/encryption/: encrypt_fileselect_screen.rs  encrypt_screen.rs  encryption_screen.rs  intents_screen.rs  mod.rs  password_encryption.rs
entmoot/src/widgets/: buttons.rs  greeting.rs  mod.rs
fangorn/: Cargo.toml  README.md
fangorn/src/: cli.rs  lib.rs  main.rs  node.rs  service.rs  test.rs  types.rs  utils.rs
fangorn/src/backend/: README.md  iroh.rs  mod.rs  substrate.rs
fangorn/src/client/: cli.rs  crypto.rs  mod.rs  node.rs  service.rs
fangorn/src/crypto/: cipher.rs  decrypt.rs  encrypt.rs  keystore.rs  keyvault.rs  mod.rs  vault.rs
fangorn/src/entish/: challenges.rs  intents.rs  mod.rs  solutions.rs  utils.rs  verifiers.rs
fangorn/src/gadget/: README.md  challenges.rs  intents.rs  mod.rs  password.rs  psp22.rs  sr25519.rs  verifiers.rs
fangorn/src/node/: cli.rs  mod.rs  node.rs  service.rs
fangorn/src/pool/: contract_pool.rs  mod.rs  pool.rs  watcher.rs
fangorn/src/rpc/: mod.rs  resolver.rs  rpc.proto  server.rs
fangorn/src/storage/: contract_policy_store.rs  contract_store.rs  iroh_docstore.rs  local_policy_store.rs  local_store.rs  metadata.scale  mod.rs
fangorn/src/verification/: mod.rs  verifiers.rs
fangorn/src/verifier/: mod.rs  verifier_utils.rs
iris/: Cargo.toml  config.txt
iris/src/: cli.rs  lib.rs  main.rs  node.rs  service.rs
iris/src/client/: crypto.rs  mod.rs
iris/src/rpc/: rpc.proto  server.rs
iris/src/storage/: contract_policy_store.rs  local_policy_store.rs  mod.rs
iris/src/verifier/: mod.rs
quickbeam/: Cargo.toml  README.md
quickbeam/src/: lib.rs  main.rs
retina/: Cargo.toml  README.md
retina/src/: main.rs
roots/: Cargo.toml  README.md
roots/src/: main.rs
src/: cli.rs  main.rs  node.rs  types.rs
src/rpc/: server.rs
ui/: package-lock.json  package.json
ui/public/: iris.wasm  psp22.wasm
ui/src/: App.css  App.js  index.js  iris.json  psp22.json  verifiable_flipper.json
