[workspace.package]
authors = ["driemworks <driemworks@idealabs.network>"]
version = "0.1.0"
edition = "2024"
homepage = "https://idealabs.network"

[workspace]
resolver = "2"

members = [
    "fangorn",
    "quickbeam",
    "entmoot",
    "contract/iris",
    "contract/psp22",
]

# [workspace.lints.rust]
# suspicious_double_ref_op = { level = "allow", priority = 2 }
# # `substrate_runtime` is a common `cfg` condition name used in the repo.
# unexpected_cfgs = { level = "warn", check-cfg = [
# 	'cfg(build_opt_level, values("3"))',
# 	'cfg(build_profile, values("debug", "release"))',
# 	'cfg(enable_alloc_error_handler)',
# 	'cfg(fuzzing)',
# 	'cfg(ignore_flaky_test)',
# 	'cfg(substrate_runtime)',
# ] }

# [workspace.lints.clippy]
# all = { level = "allow", priority = 0 }
# bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
# borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
# complexity = { level = "warn", priority = 1 }
# correctness = { level = "warn", priority = 1 }
# default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
# derivable_impls = { level = "allow", priority = 2 }                  # false positives
# eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
# erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
# extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
# identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
# if-same-then-else = { level = "allow", priority = 2 }
# needless-lifetimes = { level = "allow", priority = 2 }               # generated code
# needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
# nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
# option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
# stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
# too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
# type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
# unit_arg = { level = "allow", priority = 2 }                         # stylistic
# unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
# useless_conversion = { level = "allow", priority = 2 }               # Types may change
# while_immutable_condition = { level = "allow", priority = 2 }        # false positives
# zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.98"
cid = "0.11.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
nom = { version = "8.0.0" }
thiserror = "2.0.17"

# networking
iroh = { version = "0.34.1", default-features = false, features = [
    "discovery-local-network",
] }
iroh-gossip = { version = "0.34.1", features = ["rpc"] }
n0-future = "0.1.2"

#crypto
silent-threshold-encryption = { git = "https://github.com/driemworks/silent-threshold-encryption.git", branch = "dev", default-features = false }
# silent-threshold-encryption = { path = "../silent-threshold-encryption", default-features = false }
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.1"
ark-bls12-381 = "0.5.0"
rand_core = "0.9.3"
jsonrpsee = { version = "0.24", features = ["http-client"] }
bip39 = "2.2.0"
sha256 = "0.10.9"

# substrate
sp-core = { version = "38.1.0", features = ["std", "full_crypto"] }
sp-core-hashing = "16.0.0"
sp-application-crypto = "43.0.0"
sp-weights = "33.1.0"
subxt = "0.44.0"
subxt-signer = "0.44.0"
sc-keystore = "38.0.0"
sp-keyring = "44.0.0"
sp-keystore = "0.44.1"
sp-runtime = "44.0.0"

# ratatui
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.29"


postcard = "1.1.1"
clap = { version = "4.5.37", default-features = false, features = ["derive"] }
tokio = "1.44.2"
tarpc = { version = "0.36.0", default-features = false, features = ["full"] }
tokio-serde = "0.9.0"
futures = "0.3.31"
axum = "0.8.4"
tonic = "0.13.0"
prost = "0.13.5"

serde = "1.0.219"
serde_json = "1.0.145"

tonic-reflection = "0.13.0"
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
    "derive",
] }
hex = "0.4.3"
bytes = "1.10.1"
iroh-docs = { version = "0.34.0", features = ["rpc"] }
iroh-blobs = "0.34.1"
quic-rpc = "0.19.0"
flume = "0.11.1"

#local deps
fangorn = { path = "./fangorn" }