[workspace.package]
authors = [
    "Tony <driemworks@idealabs.network>",
    "Coleman <coleman@idealabs.network>",
]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

members = ["fangorn", "quickbeam", 
# "entmoot", 
"contract/iris", "contract/pool", "contract/psp22"]

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.98"
cid = "0.11.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
nom = { version = "8.0.0" }
thiserror = "2.0.17"

# networking
iroh = { version = "0.95.1", default-features = false, features = [
    "discovery-local-network",
] }
iroh-gossip = { version = "0.95.0", features = ["rpc"] }
iroh-docs = { version = "0.95.0" }
iroh-blobs = "0.97.0"
n0-error = "0.1.2"
n0-future = "0.1.2"
public-ip = "0.2"
local-ip-address = "0.6.5"

#crypto
silent-threshold-encryption = { git = "https://github.com/driemworks/silent-threshold-encryption.git", branch = "dev", default-features = false }
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
rand = "0.9.1"
ark-bls12-381 = "0.5.0"
rand_core = "0.9.3"
bip39 = "2.2.0"
sha2 = "0.10.9"

# substrate
sp-core = { version = "38.1.0", features = ["std", "full_crypto"] }
sp-core-hashing = "16.0.0"
sp-application-crypto = "43.0.0"
subxt = "0.44.0"
subxt-signer = "0.44.0"
sc-keystore = "38.0.0"
sp-keyring = "44.0.0"
sp-keystore = "0.44.1"
sp-runtime = "44.0.0"

# ratatui
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.29"

clap = { version = "4.5.37", default-features = false, features = ["derive"] }
tokio = "1.44.2"
tarpc = { version = "0.36.0", default-features = false, features = ["full"] }
tokio-serde = "0.9.0"
futures = "0.3.31"
axum = "0.8.4"
tonic = "0.13.0"
prost = "0.13.5"

serde = "1.0.219"
serde_json = "1.0.145"

tonic-reflection = "0.13.0"
bincode = "2.0.1"
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
    "derive",
] }
hex = "0.4.3"
bytes = "1.10.1"
quic-rpc = "0.19.0"
flume = "0.11.1"

#local deps
fangorn = { path = "./fangorn" }

# [patch.crates-io]
# hickory-proto = { version = "=0.25.1" }
