[package]
name = "entmoot"
authors = ["colemanirby <coleman@idealabs.network>"]
version = "0.1.0"
edition = "2024"
homepage = "https://idealabs.network"

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ratatui-explorer = "0.2.1"
fangorn.workspace = true
ratatui-textarea = "0.4.1"
tui-textarea = "0.7.0"
