[package]
name = "fangorn"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
nom.workspace = true
thiserror.workspace = true

iroh.workspace = true
iroh-gossip.workspace = true
n0-error.workspace = true
n0-future.workspace = true
silent-threshold-encryption.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
sp-core.workspace = true
sp-core-hashing.workspace = true
sc-keystore.workspace = true
sp-keyring.workspace = true
sp-keystore.workspace = true
sp-application-crypto.workspace = true
sp-runtime.workspace = true
bip39.workspace = true
sha2.workspace = true

ark-std.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
rand.workspace = true
ark-bls12-381.workspace = true
rand_core.workspace = true
clap.workspace = true
tokio.workspace = true
tarpc.workspace = true
tokio-serde.workspace = true
futures.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

tonic-reflection.workspace = true
ark-serialize.workspace = true
codec.workspace = true
hex.workspace = true
bytes.workspace = true
iroh-docs.workspace = true
iroh-blobs.workspace = true
quic-rpc.workspace = true
flume.workspace = true
rust-vault.workspace = true
secrecy.workspace = true
ed25519 = "2.2.3"

bincode.workspace = true
cid.workspace = true
multihash-codetable.workspace = true
public-ip.workspace = true
local-ip-address.workspace = true
