[package]
name = "quickbeam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
iroh.workspace = true
iroh-gossip.workspace = true
n0-future.workspace = true
silent-threshold-encryption.workspace = true
ark-std.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
rand.workspace = true
ark-bls12-381.workspace = true
rand_core.workspace = true
postcard.workspace = true
clap.workspace = true
tokio.workspace = true
tarpc.workspace = true
tokio-serde.workspace = true
futures.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
tonic-reflection.workspace = true
ark-serialize.workspace = true
codec.workspace = true
hex.workspace = true
bytes.workspace = true
iroh-docs.workspace = true
iroh-blobs.workspace = true
quic-rpc.workspace = true
flume.workspace = true
fangorn.workspace = true
cid.workspace = true
multihash-codetable.workspace = true
